[package]
name = "cst-primitives"
version = "1.0.0"
authors = ["crustio"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
# third party dependencies
serde = { optional = true, features = ["derive"], version = "1.0.116" }
parity-scale-codec = { default-features = false, features = ["bit-vec", "derive"], version = "2.0.0" }

# substrate primitives
sp-runtime = { default-features = false, git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
sp-core = { default-features = false, git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
sp-std = { default-features = false, git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
frame-support = { default-features = false, git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
	"frame-support/std",
	"serde",
]
test = []