[package]
authors = ["crustio"]
edition = "2018"
name = "crust-rpc"
version = "1.0.0"
license = "Apache-2.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
jsonrpc-core = "15.1.0"
frame-rpc-system = { package = "substrate-frame-rpc-system", git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1"  }
codec = { default-features = false, package = "parity-scale-codec", version = "2.1.0" }

# substrate client dependencies
sc-client-api = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1"}
sc-rpc = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1"}
sc-consensus-babe = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
sc-consensus-babe-rpc = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
sc-consensus-epochs = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
sc-finality-grandpa = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
sc-finality-grandpa-rpc = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
sc-keystore = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1"}

# substrate pallet dependencies
sp-keystore = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
sp-blockchain = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1"}
sp-runtime = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1"}
sp-api = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1"}
sp-consensus = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
sp-consensus-babe = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
txpool-api = { package = "sp-transaction-pool", git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
pallet-transaction-payment-rpc = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1"}
sp-block-builder = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1"}

# crust dependent
crust-primitives = { package = "cst-primitives", path="../primitives", version = "1.0.0" }
crust-runtime = { package = "crust-runtime", path = "../runtime", version = "1.0.0" }
