[package]
name = "cstrml-staking"
version = "1.0.0"
authors = ["crustio"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
# third party dependencies
serde = { optional = true, version = "1.0.116" }
safe-mix = { default-features = false, version = "1.0.0" }
codec = { package = "parity-scale-codec", default-features = false, features = ["derive"], version = "2.1.0" }
log = { version = "0.4.14", default-features = false }

# substrate frame dependencies
frame-support = { default-features = false, git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
frame-system = { default-features = false, git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
pallet-session = { features = ["historical"], default-features = false, git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
pallet-authorship = { default-features = false, git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }

# substrate primitives
sp-keyring = { optional = true, git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
sp-std = { default-features = false, git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
sp-io ={ default-features = false, git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
sp-runtime = { default-features = false, git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
sp-staking = { default-features = false, git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1" }
rand_chacha = { default-features = false, version = "0.2" }

# crust runtime modules
swork = { package = "cstrml-swork", path = "../swork", default-features = false }
primitives = { package = "cst-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1"}
balances = { package = "cstrml-balances", path = "../balances" }
primitives = { package = "cst-primitives", path = "../../primitives", features = ["test"] }
pallet-timestamp = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1"}
frame-benchmarking = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1"}

# private crate inside substrate
substrate-test-utils = { git = "https://github.com/crustio/substrate", rev = "d63819e0fdc8a6b17cd02b939533911eafdd48b1"}

[features]
equalize = []
migrate = []
default = ["std", "equalize"]
std = [
	"serde",
	"safe-mix/std",
	"sp-keyring",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"swork/std"
]
runtime-benchmarks = [
    "frame-benchmarking",
]